--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -442,11 +442,11 @@
 })(mui, document);
 //email check
 function publishscheck(){
-	//if (!Repository.User.isEmptyEmail()) {
-	//	 return;
-	//}else{
+	if (!Repository.User.isEmptyEmail()) {
+		 return;
+	}else{
 		publishs();
-	//}
+	}
 }
 //submit form
 function publishs() {
