--- a/kankan/pages/main/news.html
+++ b/kankan/pages/main/news.html
@@ -34,6 +34,7 @@
 		    <h1 class="mui-title lang" data-locale="messagetitle"></h1>
 		</header>
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
+			<div  id="reloadpage" onclick="reloadpage()"  style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
   			<div class="mui-scroll">
 				<ul id="OA_task_1" class="mui-table-view">
 				<!--<li class="mui-table-view-cell">
@@ -63,9 +64,9 @@
 			      up: {
 			        contentrefresh: TextMessage.loading,
 			        contentnomore:TextMessage.nomore,
-			        contentinit: TextMessage.upmore,
+			        contentinit: "",
 			        contentdown:TextMessage.upmore,
-			        callback: pullupRefresh
+			        callback: pullupRefresh,
 			      },
 			      down : {
 				      	contentrefresh: TextMessage.loading,
@@ -118,6 +119,9 @@
 			});
 				
 		  })(mui)
+		  function reloadpage(){
+				location.reload();
+			}
 			//show message
 			function showmessage(results){
 				if(results.data.message==""){
@@ -147,6 +151,7 @@
 			}
 		  //up
 		  function pullupRefresh(){
+		  	//mui('#pullrefresh').pullRefresh().disablePullupToRefresh();
 		  	setTimeout(function(){
 		  		getmessage(page);
 		  	},500);
@@ -174,10 +179,16 @@
 						console.log(data);
 						showmessage(data);
 						$(".deletenewstext").html(TextMessage.deletenewstext);
+						//mui('#pullrefresh').pullRefresh().enablePullupToRefresh();
 					},
 					ng: function(data) {
 						Api.callback_ng(data);
 					},
+					error:function(){
+						$(".mui-pull").hide();
+						$(".mui-scroll").hide();
+						$("#reloadpage").show();
+					}
 				});
 			});
 		}
@@ -211,7 +222,6 @@
 				Api.callback_ng(data);
 			},
 		});
-		//getmessage("1");
 		
 		
 		
