--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -69,6 +69,9 @@
 		<script src="../../../js/common.js"></script>
 		<script>
 			mui.init();
+			function reloadpage(){
+				location.reload();
+			}
 			window.addEventListener('requestpage', function(event) {
 				self.location.reload();
 				
@@ -251,6 +254,12 @@
        							mainPage.show();
 						}
 						
+					},
+					error:function(){
+						var nodata='<div  id="reloadpage" onclick="reloadpage()"  style="display: ;"><font size="2" class="lang" data-locale="networkerror"></font></div>';
+						//$("#reloadpage").show();
+						$(".mui-scrolls").html(nodata);
+						$(".jiaoyihitext").hide();
 					}
 				});
 			});
