--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -63,13 +63,14 @@
 			<!--main content start-->
 			<div class="mui-page-content">
 				<div class="mui-scroll-wrapper">
-					<div id="loading" class="mui-content ka_userbox">
+					<!--<div id="loading" class="mui-content ka_userbox">
 						<div class="spinner">
 						  <div class="double-bounce1"></div>
 						  <div class="double-bounce2"></div>
 						</div>
-					</div>
-					<div class="tran-page" style="display:none;">
+					</div>-->
+					<div  id="reloadpage" onclick="reloadpage()"  style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div> 
+					<div class="tran-page">
 						<ul class="mui-table-view">
 							<li class="head-img-box">
 								<div>
@@ -321,6 +322,9 @@
 				mui.fire(homePage, 'refresh',{refresh:"canRefresh"});
 		    }
 		});
+		function reloadpage(){
+			location.reload();
+		}
 		function closed(){
 			mui.toast(TextMessage.noopen, {
 				duration: 'long',
@@ -826,6 +830,10 @@
 					}
 					console.log("other error code:" + data);
 					
+				},
+				error:function(){
+					$("#reloadpage").show();
+					$(".tran-page").hide();
 				}
 			});
 			
