--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -630,6 +630,9 @@ function publishs() {
 			}
 			console.log("other error code:" + data);
 			
+		},
+		error:function(){
+			error_tost.message();
 		}
 	});
 
