--- a/kankan/pages/main/products/product_want_to_buy.html
+++ b/kankan/pages/main/products/product_want_to_buy.html
@@ -144,6 +144,9 @@ function publishs() {
 		ng: function(data) {
 			Log.d(data);
 			Api.callback_ng(data);
+		},
+		error:function(){
+			error_tost.message();
 		}
 	});
 
