--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -784,7 +784,7 @@
 								url:"../../login/login.html"
 							});
 						} 
-						if(data=="2002"){
+						if(data=="2002" || data=="2022"){
 							mui.toast(TextMessage.userng, {
 								duration: 'long',
 								type: 'div'
