--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -130,7 +130,7 @@
 									<li class="user-point-grid" id="area">
 										<a href="#">
 											<font color="#AAAAAA" size="2">
-												<span class="mui-icon mui-icon-paperplane"><font size="3" class="address" id="city"></font></span>
+												<span class="mui-icon mui-icon-paperplane" style="margin-left:-0.3em;"><font size="3" class="address" id="city"></font></span>
 											</font>
 										</a>
 									</li>
