交易页面被冻结用户跳转到登录页面

--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -252,6 +252,14 @@
 							$(".jiaoyihitext").hide();
 							var mainPage = plus.webview.getLaunchWebview();
        							mainPage.show();
+   							mui.toast(TextMessage.test, {
+								duration: 'long',
+								type: 'div'
+							});
+							mui.openWindow({
+								id: 'login',
+								url: "../../login/login.html"
+							});
 						}
 						
 					},
