--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -816,7 +816,7 @@
 					//}
 				},
 				ng: function(data) {
-					if(data == "2002") {
+					if(data == "2002" || data == "2022") {
 						mui.toast(TextMessage.test, {
 							duration: 'long',
 							type: 'div'
