--- a/kankan/pages/main/products/product_want_to_buy.html
+++ b/kankan/pages/main/products/product_want_to_buy.html
@@ -46,7 +46,7 @@
 			                   <input type="text" class="lang" data-locale="commodity_namelength" id="comm_name" name="comm_name" maxlength="40" onfocus="closekeybord()">
 				            </li>
 				            <li class="mui-table-view-cell">
-				                 <textarea  class="ka_noborder" maxlength="1000" id="comm_detail" name="comm_detail" onkeyup="daojishu()"></textarea>
+				                 <textarea  class="ka_noborder" maxlength="1000" id="comm_detail" name="comm_detail" onkeydown="daojishu()"></textarea>
 				            	<div class="daojishitext"></div>
 				            </li>
 				        </ul>
@@ -78,7 +78,8 @@ function closekeybord(){
 function daojishu(){
 	var delength=$("#comm_detail").val().trim().length;
 	var cha=1000-delength;
-	var texts=TextMessage.inputtext+"<font color='red'>"+cha+"</font>"+TextMessage.inputpoint;
+	//var texts=TextMessage.inputtext+"<font color='red'>"+cha+"</font>"+TextMessage.inputpoint;
+	var texts="<font color='#ACACB4'>"+delength+"/1000</font>";
 	$(".daojishitext").html(texts);
 }
 //email check
