--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -248,7 +248,7 @@
 					ng: function(data) {
 						console.log(data);
 						Api.callback_ng(data);
-						if(data=="1000"|| data=="2002"){
+						if(data=="1000"|| data=="2002" || data=="2022"){
 							$(".jiaoyihitext").hide();
 							var mainPage = plus.webview.getLaunchWebview();
        							mainPage.show();
