--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/login/update_password.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/login/update_password.html
@@ -18,13 +18,19 @@
 			
 			.mui-input-group label {
 				font-size: smaller;
-				width: 38%;
+				width: 41%;
 			}
 			
 			.mui-input-row label~input,
 			.mui-input-row label~select,
 			.mui-input-row label~textarea {
-				width: 55%;
+				width: 59%;
+				font-size: 75%;
+			}
+			
+			#password, #ver_code {
+				font-size: 67%;
+				line-height: 1.5;
 			}
 			
 			.mui-checkbox input[type=checkbox],
@@ -120,6 +126,7 @@
 							ok: function(data) {
 								setTimeout(function(){
 									waiting.close();
+									plus.nativeUI.toast(TextMessage.pwdudsuccess);
 									$.openWindow({
 										id:'login',
 										url:'login.html',
@@ -132,14 +139,35 @@
 								}, 500);
 							},
 							ng: function(data) {
-//								if(data == "2014") {
-//									mui.toast(TextMessage.confirmcodeng, {
-//										duration: 'long',
-//										type: 'div'
-//									});
-//								}
+								switch (data){
+									case "2014":
+										mui.toast(TextMessage.confirmcodeng, {
+											duration: 'long',
+											type: 'div'
+										});
+										break;
+									case "2010":
+										mui.toast(TextMessage.not_exist_email, {
+											duration: 'long',
+											type: 'div'
+										});
+										break;
+									case "1001":
+										plus.nativeUI.alert(TextMessage.re_issue, function(event) {
+											mui.back();
+										}, TextMessage.sharetitle, TextMessage.yes);
+										break;
+									case "5001":
+										mui.toast(TextMessage.emailsenderror, {
+											duration: 'long',
+											type: 'div'
+										});
+										break;
+									default:
+										break;
+								}
 								waiting.close();
-								Api.callback_ng(data);
+								//Api.callback_ng(data);
 							},
 							error: function(){
 								waiting.close();
