--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/news.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/news.html
@@ -33,7 +33,8 @@
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title lang" data-locale="messagetitle"></h1>
 		</header>
-		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
+		<div id="pullrefresh" class="mui-content mui-scroll-wrapper" style="margin-top: -3em;">
+			<div  id="reloadpage" onclick="reloadpage()"  style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
   			<div class="mui-scroll">
 				<ul id="OA_task_1" class="mui-table-view">
 				<!--<li class="mui-table-view-cell">
@@ -63,9 +64,9 @@
 			      up: {
 			        contentrefresh: TextMessage.loading,
 			        contentnomore:TextMessage.nomore,
-			        contentinit: TextMessage.upmore,
+			        contentinit: "",
 			        contentdown:TextMessage.upmore,
-			        callback: pullupRefresh
+			        callback: pullupRefresh,
 			      },
 			      down : {
 				      	contentrefresh: TextMessage.loading,
@@ -79,6 +80,9 @@
 					mui.fire(homePage, 'refresh',{refresh:"canRefresh"});
 			    }
 		  });  
+		  mui.plusReady(function() {
+		  	$("#pullrefresh").attr("style","margin-top:-3em");
+		  });
 		  //delete message
 		  (function($) {
 		  	var btnArray = [TextMessage.sure, TextMessage.cancel];
@@ -118,6 +122,9 @@
 			});
 				
 		  })(mui)
+		  function reloadpage(){
+				location.reload();
+			}
 			//show message
 			function showmessage(results){
 				if(results.data.message==""){
@@ -143,10 +150,10 @@
 			        table.appendChild(li);
 				}
 				page=page*1+1;
-				//$(".mui-pull-caption-down").hide();
 			}
 		  //up
 		  function pullupRefresh(){
+		  	//mui('#pullrefresh').pullRefresh().disablePullupToRefresh();
 		  	setTimeout(function(){
 		  		getmessage(page);
 		  	},500);
@@ -173,11 +180,18 @@
 					ok: function(data) {
 						console.log(data);
 						showmessage(data);
+						$("#pullrefresh").attr("style","margin-top:-1.1em;");
+						//mui('#pullrefresh').pullRefresh().enablePullupToRefresh();
 						$(".deletenewstext").html(TextMessage.deletenewstext);
 					},
 					ng: function(data) {
 						Api.callback_ng(data);
 					},
+					error:function(){
+						$(".mui-pull").hide();
+						$(".mui-scroll").hide();
+						$("#reloadpage").show();
+					}
 				});
 			});
 		}
@@ -211,7 +225,6 @@
 				Api.callback_ng(data);
 			},
 		});
-		//getmessage("1");
 		
 		
 		
