--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/login/reg.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/login/reg.html
@@ -102,11 +102,19 @@
 				font-size: 67%;
 				line-height: 1.5;
 			}
+			
+			.input-top {
+		        position:relative;
+		        top:0px;
+		        left:0px;
+		        width:100%;
+		        z-index:1;
+		    }
 		</style>
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
+		<header class="mui-bar mui-bar-nav input-top">
 			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
 			<a class="lang" data-locale="back"></a>
 			<h1 class="mui-title"><span class="lang" data-locale="user-login"></span></h1>
@@ -379,6 +387,11 @@
 
 					var showCityPicker = function() {
 						Log.i("click cityPicker");
+						doc.getElementById('email').blur();
+						doc.getElementById('username').blur();
+						doc.getElementById('password').blur();
+						doc.getElementById('passwordConfirm').blur();
+						doc.getElementById('verificationCode').blur();
 						cityPicker.show(function(items) {
 							var cityElement = doc.getElementById('city');
 							cityElement.value = items[0].text;
