--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/setting/question.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/setting/question.html
@@ -82,6 +82,10 @@
 				var fullname=info.full_name;
 				$("#email").val(email);
 			}
+			function inputblur(){
+				document.getElementById('full_name').blur();
+				document.getElementById('contents').blur();
+			}
 			function submitvals(){
 				var full_name=$("#full_name").val();
 				var email=$("#email").val();
@@ -127,8 +131,12 @@
 								mui.back();
 							},
 							ng: function(data) {
+								Api.callback_ng(data);
 								console.log("error:"+data);
 								Log.d(data);
+							},
+							error:function(){
+								error_tost.message();
 							}
 						});
 					}
