--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/setting/setting.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/setting/setting.html
@@ -81,7 +81,7 @@
 				        </li>
 				        <li class="mui-table-view-cell">
 				         <div class="mui-pull-left lang" data-locale="version"></div> 
-				         <div class="mui-pull-right">0.0.9</div>
+				         <div class="mui-pull-right">0.0.12</div>
 				        </li>
 				    </ul>
 				</div>
@@ -269,7 +269,7 @@
 				$("#moneyCalculat_jptext").hide();
 				$("#Summary_jptext").hide();
 				$("#Summary_zhtext").show();
-			}else if(language=="ja-JP" || language=="Ja-JP"){
+			}else{
 				$("#rule_jptext").show();
 				$("#rule_zhtext").hide();
 				$("#forbiden_jptext").show();
