--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/setting/specialbus.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/setting/specialbus.html
@@ -36,7 +36,7 @@
 			if(language=="zh-CN" || language=="zh-TW" || language=="zh-HK"){
 				$("#commerciallaw_jptext").hide();
 				$("#commerciallaw_zhtext").show();
-			}else if(language=="ja-JP" || language=="Ja-JP"){
+			}else{
 				$("#commerciallaw_jptext").show();
 				$("#commerciallaw_zhtext").hide();
 			}
