--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -48,7 +48,7 @@
 							<input type="text" class="lang" data-locale="commodity_namelength" id="comm_name" name="comm_name" maxlength="40" onfocus="closepicker()" onblur="pickershow()">
 						</li>
 						<li class="mui-table-view-cell">
-							<textarea class="ka_noborder" maxlength="1000" id="comm_detail" name="comm_detail" onfocus="closepicker()" onblur="pickershow()" onkeyup="daojishu()"></textarea>
+							<textarea class="ka_noborder" maxlength="1000" id="comm_detail" name="comm_detail" onfocus="closepicker()" onblur="pickershow()" oninput="daojishu()"></textarea>
 							<div class="daojishitext"></div>
 						</li>
 					</ul>
