--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -189,6 +189,7 @@
 
 			<div class="mui-content-padded">
 				<p class="lang" data-locale="register-tips"></p>
+				<p class="lang" data-locale="register-tips-1"></p>
 			</div>
 		</div>
 		<script type="text/javascript" src="../../js/mui.min.js"></script>
